<resources>
    <string name="app_name">ImportantTodos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_todo_item">Enter a Todo item</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="completed">Completed</string>
    <string name="button_login">Sign in</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="title_login" formatted="true">Sign in</string>
    <string name="title_register" formatted="true">Sign up</string>
    <string name="signup_prompt">Não tem uma conta? Cadastre-se aqui</string>
    <string name="title_signup">Cadastre-se</string>
    <string name="enter_name">Digite seu nome</string>
    <string name="enter_email">Digite seu email</string>
    <string name="enter_password">Digite sua senha</string>
    <string name="button_signup">Cadastrar</string>

    <string name="have_account" formatted="true">Do you have account?</string>

</resources>
